src/test/resources/purescript_examples/failing/OrphanInstanceNullary.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith OrphanInstance\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Test')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Lib')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('c')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)('\n')
